Fix method calls to use getFirst() for Card retrieval and correct spelling of notifyListeners()